# opm-dune-cmake

./: cmake.sh  config.opts  dirmake.sh  dune.module  example-config.opts
chiwoms-buildfiles/: CMakeLists.txt  chiwoms.pc.in  config.h.cmake
chiwoms-buildfiles/cmake/modules/: ChiwomsMacros.cmake
cmake/modules/: AlternativeBuild.cmake  DuneBuildSystem.cmake  EwomsAddApplication.cmake  ExternalBuild.cmake  OpmCoreMacros.cmake  OpmMacros.cmake  OpmOutputMacros.cmake
ewoms-buildfiles/: CMakeLists.txt  config.h.cmake
ewoms-buildfiles/cmake/modules/: EwomsMacros.cmake
ewoms-buildfiles/referencesolutions/: SPE1CASE1.SMSPEC  SPE1CASE1.UNRST
opm-common-buildfiles/: CMakeLists.txt  config.h.cmake
opm-common-buildfiles/cmake/modules/: FindBoost.cmake  FindOpmOutputUtils.cmake  Findopm-tests.cmake  OpmCommonMacros.cmake  OpmMacros.cmake
opm-core-buildfiles/: CMakeLists.txt  config.h.cmake  opm-core.pc.in
opm-grid-buildfiles/: CMakeLists.txt  config.h.cmake
opm-grid-buildfiles/cmake/modules/: FindBoost.cmake  FindZOLTAN.cmake  OpmGridMacros.cmake  OpmMacros.cmake  UseWarnings.cmake
opm-material-buildfiles/: CMakeLists.txt  config.h.cmake
opm-material-buildfiles/cmake/modules/: OpmMaterialMacros.cmake
opm-models-buildfiles/: CMakeLists.txt  config.h.cmake
opm-models-buildfiles/cmake/modules/: OpmModelsMacros.cmake
opm-models-buildfiles/cmake/pkg/: ewoms-config.cmake
opm-output-buildfiles/: CMakeLists.txt  config.h.cmake  opm-output.pc.in
opm-output-buildfiles/cmake/modules/: FindOpmOutputUtils.cmake
opm-parser-buildfiles/: CMakeLists.txt  config.h.cmake  opm-parser.pc.in
opm-parser-buildfiles/cmake/modules/: OpmParserMacros.cmake
opm-simulators-buildfiles/: CMakeLists.txt  config.h.cmake
opm-simulators-buildfiles/cmake/modules/: Findopm-tests.cmake  OpmSimulatorsMacros.cmake
opm-upscaling-buildfiles/: CMakeLists.txt  config.h.cmake
opm-upscaling-buildfiles/cmake/modules/: OpmStaticTargets.cmake
